# opgm-tools

./: Cargo.toml
src/: cli.yml  lib.rs  main.rs
src/data_graph/: bin_to_sqlite3.rs  mod.rs  read_edges_file.rs  snap_edges_to_bin.rs  snap_edges_to_sqlite3.rs  sqlite3_to_graphflow.rs  sqlite3_to_neo4j.rs  sqlite3_to_sqlite3.rs  write_sqlite3.rs
src/pattern_graph/: ast.rs  gisp.pest  gisp_to_cypher.rs  gisp_to_gisp.rs  gisp_to_graphflow.rs  mod.rs  parser.rs
src/types/: mod.rs
tools/: neo4j_run.py
