[package]
name = "opgm-tools"
version = "0.0.0"
authors = ["Yanxuan Cui <e-neo@qq.com>"]
edition = "2018"
description = "A series of tools to help to evaluate opgm"

[dependencies]
clap = "2.33"
derive_more = "0.99"
itertools = " 0.9"
memmap = "0.7"
pest = "2.1"
pest_derive = "2.1"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.4"
sqlite = "0.25"
tempfile = "3.1"
